styles.css
body {
    font: 400 15px/1.8 'Source Sans Pro', sans-serif, Trebuchet, Veranda, Geneva;
    color: #777;
}

h3, h4 {
    margin: 10px 0 30px 0;
    font-size: 26px;
    color: #111;
}

/* navigation */
.navbar {
    font-family: Droid Sans, sans-serif, Trebuchet, Veranda, Geneva;
    margin-bottom: 0;
    background-color: #8b0000; /*#2d2d30;*/
    border: 0;
    font-size: 14px !important;
    letter-spacing: 2px;
    opacity: 0.9;
}
.navbar li a, .navbar .navbar-brand {
    color: #d5d5d5 !important;
}
.navbar-nav li a:hover {
    color: #fff !important;
}
.navbar-nav li.active a {
    color: #fff !important;
    background-color: #29292c !important;
}
.navbar-default .navbar-toggle {
    border-color: transparent;
}

/* header */
.jumbotron {
    text-align: center;
    margin-top: 5em;
}

.body {
    overflow: hidden;
}

.panel-title {
    font-size: 20px;
}

.panel-title a {
    text-decoration: none;
}

.panel-body {
    color: #000;
}

/* Scrollbar styles */
::-webkit-scrollbar {
    width: 12px;
    height: 12px;
}

::-webkit-scrollbar-track {
    border: 1px solid darkred;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb {
    background: darkred;
    border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
    background: red;
}

/* body */
.contact-info img {
    margin: 15px;
}

.contact-link {
    display: inline-block;
}

/* rss feed */
.rss-feed {
    overflow: hidden;
    padding-right: 2%;
}

.github-container {
    overflow-y: auto;
    overflow-x: hidden;
    max-height: 440px;
}

.github {
    visibility: hidden;
}

.github * {
    visibility: visible;
}

/* footer */
footer {
    background-color: #2d2d30;
    color: #f5f5f5;
    padding: 32px;
    position: relative;
    bottom: 0;
}
footer a {
    color: #f5f5f5;
}
footer a:hover {
    color: #777;
    text-decoration: none;
}

